--- a/package.json
+++ b/package.json
@@ -4,17 +4,30 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "expo": "^31.0.2",
+    "prop-types": "15.6.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
-    "react-native-i18n": "^2.0.15",
-    "react-navigation": "^3.0.9"
+    "react-native-i18n": "2.0.15",
+    "react-navigation": "3.0.9"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-eslint": "8.1.2",
+    "babel-preset-expo": "5.0.0",
+    "eslint": "4.9.0",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-prettier": "2.6.1",
+    "eslint-plugin-react": "7.5.1",
+    "eslint-plugin-react-native": "3.2.1",
+    "husky": "0.14.3",
+    "lint-staged": "7.2.0",
+    "prettier": "1.14.3",
+    "pretty-quick": "1.6.0"
   },
   "private": true
 }
