--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,16 @@
 {
-  "presets": ["babel-preset-expo"]
+  "presets": ["babel-preset-expo"],
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "alias": {
+          "@": "./src",
+          "assets": "./assets",
+          "translations": "./translations"
+        },
+        "extensions": [".json", ".js"]
+      }
+    ]
+  ]
 }
