--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   },
   "dependencies": {
     "expo": "^31.0.2",
+    "expo-localization": "1.0.0",
+    "i18n-js": "3.1.0",
     "prop-types": "15.6.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
-    "react-native-i18n": "2.0.15",
     "react-navigation": "3.0.9"
   },
   "devDependencies": {
     "babel-eslint": "8.1.2",
+    "babel-plugin-module-resolver": "3.1.1",
     "babel-preset-expo": "5.0.0",
     "eslint": "4.9.0",
     "eslint-config-prettier": "2.9.0",
